# drlp1

./: README.md  kick_ball1.ttt  parking1.ttt  sim_scene.py  test.py  train.py  train3d.py  工作汇报.doc
draft_scripts/: robot_test.py
libs/: robot_sim.py  sim_fun.py  simulation.ttt
libs/AIrobot/: CMakeLists.txt  main.cpp  robotcontrol.cpp  robotcontrol.h
libs/AIrobot/FFF/: CMakeLists.txt  T2.ply  rs-pcl.cpp
libs/AIrobot/Final1/: CMakeLists.txt  rs-pcl.cpp
libs/AIrobot/Final2/: CMakeLists.txt  main.cpp
libs/AIrobot/Final4/: output_24.pcd  output_24.ply  rs-pcl.cpp
libs/AIrobot/New/Final4/: CMakeLists.txt  T0_out.ply  T_or.ply  rs-pcl.cpp
libs/AIrobot/New/Final4/PCL-test/: CMakeLists.txt  T1_out.ply  main.cpp  main_o.cpp  process.ply  standard.ply
libs/AIrobot/Realsense2PCL/: CMakeLists.txt  rs-pcl.cpp  test1.ply  test11.ply  test2.ply  test22.ply
libs/AIrobot/robotSDK/inc/: AuboRobotMetaType.h  serviceinterface.h
saved_networks/: checkpoint  getball-dqn-100.index  parking-dqn-50.index
scenes/: ball_gates.ttt  kick_ball1.ttt  kick_ball_cars.ttt  nature.ttt  sim_scene.ttt  wirobot_SafeZone.ttt
vrep-lua-scripts/: contral_api.md  tank.lua  vehicle-pattern1.lua
